[package]
name = "libwild"
description = "A library that provides a fast Linux linker"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
linker-layout = { path = "../linker-layout", version = "0.8.0" }
linker-trace = { path = "../linker-trace", version = "0.8.0" }
linker-utils = { path = "../linker-utils", version = "0.8.0" }
anyhow = { workspace = true }
atomic-take = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true }
bumpalo-herd = { workspace = true }
bytesize = { workspace = true }
colored = { workspace = true }
colosseum = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
derive_more = { workspace = true }
flate2 = { workspace = true }
foldhash = { workspace = true }
gimli = { workspace = true }
glob = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
jobserver = { workspace = true }
leb128 = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true, optional = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
perfetto-recorder = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
sharded-offset-map = { workspace = true }
sharded-vec-writer = { workspace = true }
smallvec = { workspace = true }
symbolic-common = { workspace = true }
symbolic-demangle = { workspace = true }
thread_local = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
winnow = { workspace = true }
zerocopy = { workspace = true }
zstd = { workspace = true }
tempfile = { workspace = true }
text-stub-library = "0.9.0"
which = { workspace = true }
wilt = { path = "../wilt", version = "0.8.0", optional = true }

# P5b: in-process libLLVM binding.
#
# Three options were considered: `llvm-sys`, `inkwell`, and
# `libloading` + raw FFI. The choice is `libloading` + raw FFI, for:
#
#   1. LLVM version independence. `llvm-sys` and `inkwell` pin
#      against a specific LLVM major version at build time, which
#      locks wild's binary to one LLVM. Runtime dlopen means the
#      same wild binary works against any LLVM install whose C
#      ABI matches (which is stable across recent majors).
#   2. Zero build-time LLVM dependency. `llvm-sys`/`inkwell` need
#      `llvm-config` to find LLVM at compile time and have
#      notoriously fiddly build scripts. `libloading` pulls in no
#      LLVM itself — users install LLVM at their own pace.
#   3. Precedent in this crate. `macho-lto` already uses
#      `libloading` to dlopen `libLTO.dylib` the same way. Adding a
#      second libloading client keeps the FFI discipline uniform.
#
# The cost is `unsafe` FFI boilerplate matching LLVM's C ABI — ~200
# lines of it vs ~20 for `llvm-sys`. That cost is paid once; the
# ongoing maintenance wins favour our choice.
#
# `libloading` already appears in libwild's feature graph (via
# `plugins` and `macho-lto`); the `llvm` feature below adds it as
# an explicit requirement for the in-process LTO implementation.

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
perf-event = { workspace = true }

[build-dependencies]
cc = "1.1.12"

[dev-dependencies]
ar = { workspace = true }

[features]
default = ["wilt"]

# Support for running the linker as a subprocess.
fork = []

# Support for linker-plugins.
plugins = ["libloading"]

# Support for Mach-O LTO via libLTO.dylib.
macho-lto = ["libloading"]

# P5b: in-process libLLVM for UnifiedLTO. When off (the default),
# the P5a subprocess pipeline is used. When on, wild dlopens the
# system libLLVM and drives the parallel per-module pipeline
# in-process — no `fork`/`exec`, no temp-file round trip. Falls back
# to P5a automatically if libLLVM can't be located or an individual
# module can't be compiled in-process. See `wild-lto-plan.md` P5b
# for the full design and the `[dependencies]` block above for the
# choice of `libloading` over `llvm-sys`/`inkwell`.
llvm = ["libloading"]

# WASM post-link optimisation via wilt (DCE, type GC, const fold,
# compression-friendly layout). On by default; turn off with
# `default-features = false`.
wilt = ["dep:wilt"]

# Additional LEB128 compression of relocation payloads (opt-in, gated
# behind `--compress-relocations`). Implies `wilt`.
wasm-opt = ["wilt"]

# Widen the wasm writer's internal address arithmetic from u32 to u64 so
# the linker can plan memory64 layouts larger than 4 GiB. Off by default —
# when off, `Addr = u32` and address computations stay narrow; the memory64
# reloc encoders still work for values that fit in 32 bits.
wasm-addr64 = []

# Enable support for emitting a perfetto trace.
perfetto = ["perfetto-recorder/enable", "tracing/release_max_level_info"]

# Enable work-in-progress features
wip = []

[lints]
workspace = true
