[package]
name = "linker-diff"
description = "Diffs and validates ELF binaries"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
linker-layout = { path = "../linker-layout", version = "0.5.0" }
linker-trace = { path = "../linker-trace", version = "0.5.0" }
linker-utils = { path = "../linker-utils", version = "0.5.0" }
object = { workspace = true }
iced-x86 = { workspace = true }
symbolic-demangle = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
gimli = { workspace = true }
fallible-iterator = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
memmap2 = { workspace = true }
memchr = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
ascii_table = { workspace = true }
hashbrown = { workspace = true }

[lints]
workspace = true
