[package]
name = "linker-diff"
description = "Diffs and validates ELF binaries"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
linker-layout = { path = "../linker-layout", version = "0.8.0" }
linker-trace = { path = "../linker-trace", version = "0.8.0" }
linker-utils = { path = "../linker-utils", version = "0.8.0" }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
gimli = { workspace = true }
hashbrown = { workspace = true }
iced-x86 = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
symbolic-demangle = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
zerocopy = { workspace = true }

[lints]
workspace = true
