[package]
name = "linker-layout"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.217", features = ["derive"] }

[lints]
workspace = true
