[package]
name = "linker-layout"
description = "Data structures for storing linker layout information"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.97"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
