[package]
name = "linker-utils"
description = "Code shared by libwild and linker-diff"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.97"
object = { version = "0.36.7", default-features = false, features = [
    "elf",
    "read_core",
    "std",
    "unaligned",
] }

[lints]
workspace = true
