[package]
name = "linker-utils"
description = "Code shared by libwild and linker-diff"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
object = { workspace = true }
leb128 = { workspace = true }
paste = { workspace = true }

[lints]
workspace = true
