[package]
name = "wild"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
libwild = { path = "../libwild" }

# This is off by default, since it doesn't appear to help. However, if you're linking against musl
# libc, which has a comparatively slow allocator, then enabling this does help. To enable this,
# build with `--features mimalloc`.
mimalloc = { version = "0.1", default-features = false, optional = true }

dhat = { version = "0.3.3", optional = true }
os_info = "3.10.0"

[dev-dependencies]
anyhow = "1.0.95"
wait-timeout = "0.2.1"
itertools = "0.14.0"
object = { version = "0.36.7", default-features = false, features = [
    "elf",
    "read_core",
    "std",
    "unaligned",
] }
linker-diff = { path = "../linker-diff" }
which = "7.0.2"
rstest = "0.24.0"

[features]
default = [
    "fork",
]

fork = ["libwild/fork"]
