[package]
name = "wild-linker"
description = "A very fast linker for Linux"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "wild"
path = "src/main.rs"

[dependencies]
libwild = { path = "../libwild", version = "0.4.0" }

# This is off by default, since it doesn't appear to help. However, if you're linking against musl
# libc, which has a comparatively slow allocator, then enabling this does help. To enable this,
# build with `--features mimalloc`.
mimalloc = { version = "0.1", default-features = false, optional = true }

dhat = { version = "0.3.3", optional = true }
os_info = "3.10.0"

[dev-dependencies]
anyhow = "1.0.95"
wait-timeout = "0.2.1"
itertools = "0.14.0"
object = { version = "0.36.7", default-features = false, features = [
    "elf",
    "read_core",
    "std",
    "unaligned",
] }
linker-diff = { path = "../linker-diff", version = "0.4.0" }
which = "7.0.2"
rstest = "0.24.0"
fd-lock = "4.0.2"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"

[features]
default = ["fork"]

fork = ["libwild/fork"]
