[package]
name = "wild-linker"
description = "A very fast linker for Linux"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "wild"
path = "src/main.rs"

[dependencies]
libwild = { path = "../libwild", version = "0.5.0" }
jobserver = { workspace = true }

# This is off by default, since it doesn't appear to help. However, if you're linking against musl
# libc, which has a comparatively slow allocator, then enabling this does help. To enable this,
# build with `--features mimalloc`.
mimalloc = { workspace = true, optional = true }

dhat = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
fd-lock = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
linker-diff = { path = "../linker-diff" }
object = { workspace = true }
os_info = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
toml = { workspace = true }
wait-timeout = { workspace = true }
which = { workspace = true }

[features]
default = ["fork"]

fork = ["libwild/fork"]

# external tests
external_tests = ["mold_tests"]
mold_tests = []
