[package]
name = "wild_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["std"] }
anyhow = "1.0.93"
bitflags = "2.6.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.20"
linker-layout = { path = "../linker-layout" }
linker-trace = { path = "../linker-trace" }
linker-utils = { path = "../linker-utils" }
memchr = "2.7.4"
memmap2 = "0.9.5"
object = { version = "0.36.5", default-features = false, features = [
    "elf",
    "read_core",
    "std",
    "unaligned",
] }
rayon = "1.10.0"
smallvec = "1.13.2"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
] }
sharded-vec-writer = "0.1.0"
itertools = "0.13.0"
bytesize = "1.3.0"
flate2 = "1.0.35"
bumpalo-herd = "0.1.2"
zstd = "0.13.2"
fxhash = "0.2.1"
sha2 = "0.10.8"

[dev-dependencies]
ar = "0.9.0"

[features]
# Don't use multiple threads. This makes CPU profiles easier to read.
single-threaded = []

# Enable work-in-progress features
wip = []

[lints]
workspace = true
